traces/bug_475.txt
examples++-load/gmsh.cpp:543: error: DEAD_STORE
  The value written to &maxVertex (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:543:4: Write of unused value
541.   	  //map<int,int> mapnumv; 
542.   	  
543.   	  int minVertex = nv + 1, maxVertex = -1;
          ^
544.   	  for(int i = 0; i < nv; i++) {
545.   	    int num;	
